WDZO-631: Error handling fixed
Squashed commit of the following:

commit 5fb986416f99e5173df6373b049614d369847663
Author: Morozov-MV <morozov.m.vyac@sberbank.ru>
Date:   Tue Sep 15 12:35:58 2020 +0300

    WDZO-631: String literals changed to constants

commit c10eecb90759f0aa55ec96844a714697fe8dcca8
Author: Morozov-MV <morozov.m.vyac@sberbank.ru>
Date:   Mon Sep 14 13:08:59 2020 +0300

    WDZO-631: Error handling fixed

--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -16,6 +16,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    padding-left: 5px;
 }
 
 .successBlock p {
@@ -104,6 +105,7 @@
     margin-top: 10px;
     color: #f6650a;
     font-family: Roboto;
+    padding-left: 5px;
 }
 .template__link {
     padding-left: 5px;
